object-detector/Engine-manifests/stateful_detect_engine.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: object-detector-stateful
  labels:
    app: object-detector
spec:
  serviceName: object-detector
  replicas: 1
  selector:
    matchLabels:
      app: object-detector
  template:
    metadata:
      labels:
        app: object-detector
    spec:
      containers:
      - name: object-detector
        image: ghcr.io/csia-pme/csia-pme-visionaid-object-detector:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
