object-detector/Engine-manifests/ingress_detect_engine.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: object-detector-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.org/client-max-body-size: "16m"
spec:
  rules:
  - host: object-detector-csia-pme.kube.isc.heia-fr.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: detect-service-engine
            port:
              number: 80
  tls:
    - hosts:
        - object-detector-csia-pme.kube.isc.heia-fr.ch
